Phase 1 polish: fix DB growth, unit bug, and update README - Fix Main.java: maxNetSpreadPct() already in %, remove spurious × 100 (would log 177% instead of 1.77%) - Fix opportunities.net_spread_pct stored as fraction (0.0037) while sessions use percentage (0.37): now both tables use percent units - Reduce DB growth from ~4GB/day to ~5-15MB steady state:   - Increase SAVE_DEBOUNCE_MS from 2s to 30s (raw tick writes from ~3000/min to ~180/min)   - Only save session_ticks for sessions lasting >= 60s (skips the bulk of short-lived sessions)   - Enable SQLite WAL mode for better concurrent read/write performance   - Add automatic data pruning every 6h: opportunities > 48h, session_ticks > 7 days - Rewrite README: 7 exchanges (was 4), 50 symbols (was 20), correct DB growth estimates, new log format, all known quirks documented